@@ -3,7 +3,7 @@
  * For use in distributed.net projects only.
  * Any other distribution or use of this source violates copyright.
  *
- * $Id: CreateGUI.c,v 1.6 2012/06/24 12:36:39 piru Exp $
+ * $Id: CreateGUI.c,v 1.7 2013/07/26 00:27:42 piru Exp $
  *
  * Created by Ilkka Lehtoranta <ilkleht@isoveli.org>
  *
@@ -12,23 +12,22 @@
  * ----------------------------------------------------------------------
 */
 
-#undef	USE_INLINE_STDARG
-
 #include	<libraries/gadtools.h>
 #include	<libraries/mui.h>
 
 #include	<clib/alib_protos.h>
 #include	<proto/exec.h>
+#include	<proto/intuition.h>
 #include	<proto/icon.h>
 #include	<proto/muimaster.h>
 
-#include	<mui/Aboutbox_mcc.h>
+#include    <mui/Aboutbox_mcc.h>
 
 #include	"CreateGUI.h"
 #include	"guilib_version.h"
 #include	"AppClass.h"
 
-struct Library		*MUIMasterBase	= NULL;
+//struct Library		*MUIMasterBase	= NULL;
 
 #define	MUIA_Application_UsedClasses	0x8042e9a7	/* V20 STRPTR *	i..	*/
 
@@ -94,6 +93,17 @@ static struct MUI_Command commands[]	=
 	{ NULL, NULL, 0, NULL}
 };
 
+
+static inline void* memcpy(void *dest, const void *src, int n)
+{
+	char *d2 = (char*)dest;
+	const char *s2 = (const char*)src;
+
+	while (n--) *d2++ = *s2++;
+	return dest;
+}
+
+
 /**********************************************************************
 	CreateGUI
 **********************************************************************/
@@ -108,7 +118,7 @@ Object *CreateGUI(struct IClass *cl, Object *obj, struct ObjStore *os, struct Dn
 		LibBase->Library.lib_Revision
 	};
 
-#define SysBase LibBase->MySysBase
+//#define SysBase LibBase->MySysBase
 	RawDoFmt(
 	 "\33cdistributed.net client - a product of distributed.net\n"
 	 "%s\n"
@@ -124,59 +134,45 @@ Object *CreateGUI(struct IClass *cl, Object *obj, struct ObjStore *os, struct Dn
 	 "Ilkka Lehtoranta\n"
 	 "<ilkleht@isoveli.org>",
 	array, NULL, about);
-#undef SysBase
+//#undef SysBase
 
-	return DoSuperNew(cl, obj,
-		MUIA_Application_DiskObject	, LibBase->dobj,
-		MUIA_Application_Commands		, commands,
-		MUIA_Application_Version		, &VerString[1],
-		MUIA_Application_Copyright		, "distributed.net",
-		MUIA_Application_Author			, "Ilkka Lehtoranta",
-		MUIA_Application_Base			, "DNETC",
-		MUIA_Application_UsedClasses	, ClassList,
-		MUIA_Application_Title			, "dnetc",
-		MUIA_Application_Description	, "GUI for distributed.net client",
-
-		SubWindow, os->wnd	= WindowObject,
-			MUIA_Window_Title		, "distributed.net client",
-			MUIA_Window_ID			, MAKE_ID('M','A','I','N'),
-			MUIA_Window_Menustrip, MUI_MakeObject(MUIO_MenustripNM, &Menus, 0),
-
-			WindowContents, VGroup,
-				Child, os->lst = ListObject,
+	return (Object*)DoSuperNew(cl, obj,
+		MUIA_Application_DiskObject, (IPTR)LibBase->dobj,
+		MUIA_Application_Commands, (IPTR)commands,
+		MUIA_Application_Version, (IPTR)&VerString[1],
+		MUIA_Application_Copyright, (IPTR)"distributed.net",
+		MUIA_Application_Author, (IPTR)"Ilkka Lehtoranta",
+		MUIA_Application_Base, (IPTR)"DNETC",
+		MUIA_Application_UsedClasses, (IPTR)ClassList,
+		MUIA_Application_Title, (IPTR)"dnetc",
+		MUIA_Application_Description, (IPTR)"GUI for distributed.net client",
+		MUIA_Application_Window, (IPTR)(os->wnd = MUI_NewObject(MUIC_Window,
+			MUIA_Window_Title, (IPTR)"distributed.net client",
+			MUIA_Window_ID, MAKE_ID('M','A','I','N'),
+			MUIA_Window_Width, MUIV_Window_Width_Visible(55),
+			MUIA_Window_Height, MUIV_Window_Height_Visible(45),
+			MUIA_Window_Menustrip, (IPTR)MUI_MakeObject(MUIO_MenustripNM, (IPTR)&Menus, 0),
+			MUIA_Window_RootObject, (IPTR)MUI_NewObject(MUIC_Group,
+				MUIA_Group_Child, (IPTR)(os->lst = NewObject(LibBase->ListMCC->mcc_Class, NULL,
 					MUIA_Background, MUII_ReadListBack,
 					MUIA_Frame, MUIV_Frame_ReadList,
 					MUIA_CycleChain, TRUE,
-						//MUIA_ContextMenu, MUIV_List_ContextMenu_Never,
-					MUIA_List_ConstructHook, MUIV_List_ConstructHook_String,
-					MUIA_List_DestructHook, MUIV_List_DestructHook_String,
-					End,
-				End,
-			End,
-		SubWindow, os->req	= AboutboxObject,
-			MUIA_Aboutbox_Credits, about,
-
-
-/*
-			MUIA_Window_Title	, "About...",
-			WindowContents, VGroup,
-				MUIA_Background, MUII_RequesterBack,
-				Child, TextObject, TextFrame, MUIA_Background, MUII_TextBack, MUIA_Text_Contents, about, End,
-				Child, HGroup,
-					Child, RectangleObject, End,
-					Child, os->req_ok	= MUI_MakeObject(MUIO_Button, "_Moo!"),
-					Child, RectangleObject, End,
-					End,
-				End,*/
-			End,
-		End;
+				TAG_END)),
+			TAG_END),
+		TAG_END)),
+		MUIA_Application_Window, (IPTR)(os->req = MUI_NewObject(MUIC_Aboutbox,
+			MUIA_Aboutbox_Credits, (IPTR)about,
+		TAG_END)),
+	TAG_END);
 }
 
 /**********************************************************************
 	HodgePodge
 **********************************************************************/
 
+/*
 VOID HodgePodge(struct Library *MyMUIMasterBase)
 {
 	MUIMasterBase	= MyMUIMasterBase;
 }
+*/
