@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.129 2012/08/14 20:06:27 sla Exp $
+Version change log: $Id: CHANGES.txt,v 1.130 2013/07/26 00:27:42 piru Exp $
 ==========================================================================
 
 2.9100
@@ -43,6 +43,7 @@ Version change log: $Id: CHANGES.txt,v 1.129 2012/08/14 20:06:27 sla Exp $
             new: IPv6 support (#2982)
             imp: morphos: Battery/AC power det & CPU temp query
             new: opencl: New rc5-72 cores
+            imp: morphos: use standard MUI List instead of NList
 
 2.9110.519  new: amd64: New GO-2c core
             new: amd64: New GO-2d core
